fix: align text

--- a/assets/css/games.css
+++ b/assets/css/games.css
@@ -1,4 +1,5 @@
 /* Página de Games */
 .container{
+    text-align: center;
     height: 700px;
 }
